Fixed #1 by adding overflow:auto in css

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -15,3 +15,7 @@ div.student span {
     padding: 5px;
     border: 1px solid grey;
 }
+
+div#page {
+    overflow: auto;
+}
